OERs for Accessible Gamification.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1834,7 +1834,7 @@
 
     <section id="ucd-for-access">
       <h2>User-Centered Design for Accessibility (<abbr>HiAO</abbr>)</h2>
-      <p>The course User-Centered Design for Accessibility was created by the Oslo and Akershus University College of Applied Sciences (<abbr>HiOA</abbr>).
+      <p>The course &ldquo;User-Centered Design for Accessibility&rdquo; was created by the Oslo and Akershus University College of Applied Sciences (<abbr>HiOA</abbr>).
         See also the <a href="http://gpii.eu/moocap/?p=747">course description</a>.
         The entire content of the course is stored as a set of
         <a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4TmZuWkZ3OFc0ZXc"><abbr>OERs</abbr> in a Google Drive folder</a>, except for the videos.
@@ -1941,13 +1941,6 @@
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4SGVpREZPV1BXVzg">Quiz on Challenges in using <abbr>UCD</abbr> for accessibility</a> (Microsoft Word document).
           <!-- typo in doc title; folde URL: https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4UDg3Qy1tZmFOMGM -->
         </li>
-        <!--
-        <li id="ucd4a11y-step-5-01">
-          <a href=""></a>,
-          <a href=""></a>,
-          <a href=""></a>.
-        </li>
-        -->
       </ul>
 
       <h3>Module 5: Summary</h3>
@@ -1962,22 +1955,78 @@
           <a class="unlisted" href="https://www.youtube.com/watch?v=FNoR0t9ikuc">YouTube video</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4SGowQlE5SUVleHc">captions in <abbr>VTT</abbr> format</a>.
         </li>
-        <!--
-        <li id="ucd4a11y-step-5-02">
-          <a href=""></a>,
-          <a href=""></a>,
-          <a href=""></a>.
-        </li>
-        -->
       </ul>
-
     </section>
 
-  <!-- 
+
     <section id="accessible-gamification">
-    <h2>Accessible Gamification (<abbr>HDM</abbr>)</h2>
+      <h2>Accessible Gamification (<abbr>HDM</abbr>)</h2>
+      <p>The course &ldquo;Accessible Gamification&rdquo; was created by the <span lang="de">Hochschule der Medien</span>&nbsp;/
+        Stuttgart Media University.
+        See the <a href="http://gpii.eu/moocap/?p=777">course description</a>.
+        The entire course consists of videos that are available on 
+        <a href="https://vimeo.com/channels/1256224">Vimeo</a>.
+        Each video is captioned; both the videos and the captions can be downloaded from Vimeo. Below is a list of these videos.
+        The <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqMTNsaDBVZ2F2Mzg">assignments</a> 
+        at the end of each course module are available on Google Drive.
+      </p>
+      <h3>Basics</h3>
+      <ul>
+        <li id="accgame-step-1-01">
+          <a href="https://vimeo.com/221223111">Games and Fun</a>.
+        </li>
+        <li id="accgame-step-1-02">
+          <a href="https://vimeo.com/221224734">Games Classifications</a>.
+        </li>
+        <li id="accgame-step-1-03">
+          <a href="https://vimeo.com/221225287">Gamification</a>.
+        </li>
+        <li id="accgame-step-1-04">
+          <a href="https://vimeo.com/221225853">Players</a>.
+        </li>
+      </ul>
+      <h3>Gamification</h3>
+      <ul>
+        <li id="accgame-step-2-01">
+          <a href="https://vimeo.com/221226445">Gamification Classification</a>.
+        </li>
+        <li id="accgame-step-2-02">
+          <a href="https://vimeo.com/221226963">Gamification Requirements</a>.
+        </li>
+        <li id="accgame-step-2-03">
+          <a href="https://vimeo.com/221227366">Accessibility Basics</a>.
+        </li>
+      </ul>
+      <h3>Design Patterns</h3>
+      <ul>
+        <li id="accgame-step-3-01">
+          <a href="https://vimeo.com/221228560">Design Patterns Basics</a>.
+        </li>
+        <li id="accgame-step-3-02">
+          <a href="https://vimeo.com/221229514">Design Patterns Overview</a>.
+        </li>
+      </ul>
+      <h3>Reward and Challenge</h3>
+      <ul>
+        <li id="accgame-step-4-01">
+          <a href="https://vimeo.com/221230531">Reward</a>.
+        </li>
+        <li id="accgame-step-4-02">
+          <a href="https://vimeo.com/221231128">Challenge</a>.
+        </li>
+      </ul>
+      <h3>Actions Space and Development</h3>
+      <ul>
+      <ul>
+        <li id="accgame-step-5-01">
+          <a href="https://vimeo.com/221231534">Action Space and Development</a>.
+        </li>
+        <li id="accgame-step-5-02">
+          <a href="https://vimeo.com/221232193">Development</a>.
+        </li>
+      </ul>
     </section>
-  -->
+
 
 
   <!-- 
