UCD for Accessibility: Vimeo videos.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1837,19 +1837,23 @@
       <p>The course &ldquo;User-Centered Design for Accessibility&rdquo; was created by the Oslo and Akershus University College of Applied Sciences (<abbr>HiOA</abbr>).
         See also the <a href="http://gpii.eu/moocap/?p=747">course description</a>.
         The entire content of the course is stored as a set of
-        <a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4TmZuWkZ3OFc0ZXc"><abbr>OERs</abbr> in a Google Drive folder</a>, except for the videos.
-        Below is a breakdown of the content in that folder.
+        <a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4TmZuWkZ3OFc0ZXc"><abbr>OERs</abbr> in a Google Drive folder</a>, 
+        except for the videos, which can be downloaded from a dedicated 
+        <a href="https://vimeo.com/channels/1290229">channel on Vimeo</a>.
+        Below is a breakdown of all the <abbr>OER</abbr>s.
       </p>
       <h3>Module 1: Introducing <abbr>UCD</abbr> for Accessibility</h3>
       <ul>
         <li id="ucd4a11y-step-1-01">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4LVBraWFlVUlnek0">Introducing User-Centered Design</a> (Microsoft Word document containing links to the YouTube video and the captions file),
           <a class="unlisted" href="https://www.youtube.com/watch?v=_qw4expNJnY">YouTube video</a>,
+          <a href="https://vimeo.com/233024781">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4ZGNHWDc0U01nUDQ">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-1-02">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4SjFiaVFrSV9pd2s"><abbr>UCD</abbr> is important for accessibility</a> (Microsoft Word document),
           <a class="unlisted" href="https://www.youtube.com/watch?v=PvAlxI3umnc">YouTube video</a>,
+          <a href="https://vimeo.com/233026412">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4aDBhS0NvVEI2UXM">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-1-03">
@@ -1876,12 +1880,14 @@
         </li>
         <li id="ucd4a11y-step-2-04">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4ZVE0WTNSMk54Vzg">Communicating with users</a> (Microsoft Word document),
-          <a href="https://www.youtube.com/watch?v=FNZlTinnFQw">YouTube video</a>,
+          <a class="unlisted" href="https://www.youtube.com/watch?v=FNZlTinnFQw">YouTube video</a>,
+          <a href="https://vimeo.com/233027071">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4cGtoZGRQeXUtelk">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-2-05">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4ZlhablFJOGVMOG8">Rewards</a> (Microsoft Word document),
-          <a href="https://www.youtube.com/watch?v=bb-nckPVlq0">short YouTube video</a>,
+          <a class="unlisted" href="https://www.youtube.com/watch?v=bb-nckPVlq0">short YouTube video</a>,
+          <a href="https://vimeo.com/233027357">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4djRhZUxIX0JIM3c">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-2-06">
@@ -1918,17 +1924,20 @@
         </li>
         <li id="ucd4a11y-step-5-02">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4bzc1S1k5U1BmNVk">Getting your team onboard</a> (Microsoft Word document containing links to the YouTube video and the captions file),
-          <a href="https://www.youtube.com/watch?v=Z1dOHV8ky-8">YouTube video</a>,
+          <a class="unlisted" href="https://www.youtube.com/watch?v=Z1dOHV8ky-8">YouTube video</a>,
+          <a href="https://vimeo.com/233028176">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4Q3BncUdEX3haUUk">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-5-03">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4amthQXdiYUFpem8">Addressing challenges in Using <abbr>UCD</abbr> for accessibility</a> (Microsoft Word document),
-          <a href="https://www.youtube.com/watch?v=U6ymCLfwmrQ">YouTube video</a>,
+          <a class="unlisted" href="https://www.youtube.com/watch?v=U6ymCLfwmrQ">YouTube video</a>,
+          <a href="https://vimeo.com/233028490">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4UDNnbUNmbDZmQ1k">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-5-04">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4X2VWSVNneTNLRWc">Addressing challenges in using <abbr>UCD</abbr> for accessibility – an example</a> (Microsoft Word document),
-          <a href="https://www.youtube.com/watch?v=OlkfWoLMARc">YouTube video</a>,
+          <a class="unlisted" href="https://www.youtube.com/watch?v=OlkfWoLMARc">YouTube video</a>,
+          <a href="https://vimeo.com/233028872">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4emNLbGZvV0toWE0">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-5-05">
@@ -1948,11 +1957,13 @@
         <li id="ucd4a11y-step-5-01">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4NDM4bHhaTU5nVmc">Summary of <abbr>UCD</abbr> for accessibility</a> (Microsoft Word document containing links to the YouTube video and the captions file),
           <a class="unlisted" href="https://www.youtube.com/watch?v=9PX6NX4IqGA">YouTube video</a>,
+          <a href="https://vimeo.com/233029258">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4UDctd211U05ZUE0">captions in <abbr>VTT</abbr> format</a>.
         </li>
         <li id="ucd4a11y-step-5-02">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4alpxdDVkeWJrUlk">Suggestions to students and developers</a> (Microsoft Word document containing links to the YouTube video and the captions file),
           <a class="unlisted" href="https://www.youtube.com/watch?v=FNoR0t9ikuc">YouTube video</a>,
+          <a href="https://vimeo.com/233029529">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4SGowQlE5SUVleHc">captions in <abbr>VTT</abbr> format</a>.
         </li>
       </ul>
@@ -2024,6 +2035,19 @@
         <li id="accgame-step-5-02">
           <a href="https://vimeo.com/221232193">Development</a>.
         </li>
+        <li id="accgame-step-5-03">
+          <a href=""></a>.
+        </li>
+        <li id="accgame-step-5-04">
+          <a href=""></a>.
+        </li>
+        <!--
+        <li id="accgame-step-1-01">
+          <a href=""></a> (Microsoft Word document),
+          <a href=""></a>,
+          <a href=""></a>.
+        </li>
+        -->
       </ul>
     </section>
 
