--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <ul>
       <li>The website of the European project 
         European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
-        also has a <a href="http://www.eiii.eu/resources/">resouces page</a>.
+        also has a <a href="http://www.eiii.eu/resources/">resources page</a>.
         However, more importantly, the 
         <strong>search form</strong> helps you find accessibility-related
         resources on the Web.
