--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -247,6 +247,10 @@
         <a href="http://accessibility.psu.edu/foreignlanguages/">Foreign Languages and Accessibility</a>,
         <i class="website">Accessibility and Usability at Penn State</i>.
       </li>
+      <li>Carie Fisher:
+        <a href="https://medium.com/statuscode/getting-started-with-website-accessibility-5586c7febc92">Getting Started with Website Accessibility</a>,
+        <i class="blog">Statuscode</i>, 11.09.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
