+ h2: Legislation, Policy etc.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -258,6 +258,13 @@
       -->
     </ul>
 
+    <h2>Legislation, Policy, Lawsuits, &hellip;</h2>
+    <ul>
+      <li>Erin Mulvaney:
+        <a href="http://www.nationallawjournal.com/id=1202797283925/Judge-Wants-DOJs-Views-on-Website-Accessibility-for-Blind-Users">Judge Wants <abbr>DOJ</abbr>'s Views on Website Accessibility for Blind Users</a>,
+        <i class="journal">The National Law Journal</i>, 05.09.2017.
+      </li>
+    </ul>
   </main>
   <!-- Unsorted: 
     * Noun Project: https://thenounproject.com/about/ 
