Validation errors, including duplicate IDs.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1356,7 +1356,6 @@
         </ul>
       </li>
     </ul>
-    </ul>
     <h3>Week 2: Developing Inclusive Learning Environments</h3>
     <ul>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209723">Step 2.1</a>: Welcome to week 1.</li>
@@ -1511,7 +1510,7 @@
         </ul>
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/184288">Step 3.3</a>: Social and learning technologies, now and in the future:
-        <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZEZLODJfX09lYTQ">Word document</a>.</li>
+        <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZEZLODJfX09lYTQ">Word document</a>.
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201537">Step 3.4</a>: Technology power user (video):
         <ul><!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqQlo1S3A3czh1Szg -->
@@ -1623,11 +1622,9 @@
         </ul>
     -->
     </section>
-  <!-- 
-    <section id="intellectual-disability">
-    <h2>Intellectual Disability and Inclusion (<abbr>DIT</abbr>)</h2>
-    </section>
-  -->
+
+
+
     <section id="accesible-documents">
       <h2>Accessible Documents (<abbr>TUD</abbr>)</h2>
       <p>The course &ldquo;Accessible Documents&rdquo; was created by the <span lang="de">Technische Universität Dresden</span> (<abbr>TUD</abbr>).
@@ -1898,56 +1895,56 @@
 
       <h3>Module: Demonstrating User Testing for Accessibility</h3>
       <ul>
-        <li id="ucd4a11y-step-4-01">
+        <li id="ucd4a11y-step-3-01">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4c3NNRjZoWXZMak0">Planning</a> (Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-4-02">
+        <li id="ucd4a11y-step-3-02">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4V2Q0OGZ4Qjl5TEE">Recruiting participants</a> (Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-4-03">
+        <li id="ucd4a11y-step-3-03">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4OUhKWXlQb1hKdlk">Summary of testing accessibility with users</a> (Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-4-04">
+        <li id="ucd4a11y-step-3-04">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4SFI5NkNNRjVOZWc">Background for the case</a> (short Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-4-05">
+        <li id="ucd4a11y-step-3-05">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4S3dMVGhSMV9KbFE">Reading on <abbr>UCD</abbr> for accessibility – User testing</a> (Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-4-06">
+        <li id="ucd4a11y-step-3-06">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4RHlDdDc2bVF6ekk">Summary of testing accessibility with users</a> (Microsoft Word document).
         </li>
       </ul>
 
       <h3>Module: Addressing Challenges in Using <abbr>UCD</abbr> for Accessibility</h3>
       <ul>
-        <li id="ucd4a11y-step-5-01">
+        <li id="ucd4a11y-step-4-01">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4Q0JpYktZM2VVT2M">Challenges in using <abbr>UCD</abbr> for accessibility</a> (Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-5-02">
+        <li id="ucd4a11y-step-4-02">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4bzc1S1k5U1BmNVk">Getting your team onboard</a> (Microsoft Word document containing links to the YouTube video and the captions file),
           <!-- <a class="unlisted" href="https://www.youtube.com/watch?v=Z1dOHV8ky-8">YouTube video</a>, -->
           <a href="https://vimeo.com/233028176">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4Q3BncUdEX3haUUk">captions in <abbr>VTT</abbr> format</a>.
         </li>
-        <li id="ucd4a11y-step-5-03">
+        <li id="ucd4a11y-step-4-03">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4amthQXdiYUFpem8">Addressing challenges in Using <abbr>UCD</abbr> for accessibility</a> (Microsoft Word document),
           <!-- <a class="unlisted" href="https://www.youtube.com/watch?v=U6ymCLfwmrQ">YouTube video</a>, -->
           <a href="https://vimeo.com/233028490">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4UDNnbUNmbDZmQ1k">captions in <abbr>VTT</abbr> format</a>.
         </li>
-        <li id="ucd4a11y-step-5-04">
+        <li id="ucd4a11y-step-4-04">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4X2VWSVNneTNLRWc">Addressing challenges in using <abbr>UCD</abbr> for accessibility – an example</a> (Microsoft Word document),
           <!-- <a class="unlisted" href="https://www.youtube.com/watch?v=OlkfWoLMARc">YouTube video</a>, -->
           <a href="https://vimeo.com/233028872">video on Vimeo</a>,
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4emNLbGZvV0toWE0">captions in <abbr>VTT</abbr> format</a>.
         </li>
-        <li id="ucd4a11y-step-5-05">
+        <li id="ucd4a11y-step-4-05">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4NFlOYk9CUnVJZTQ">Example of using <abbr>UCD</abbr> for accessibility</a> (Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-5-06">
+        <li id="ucd4a11y-step-4-06">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4SUl3dHhRMElvT0U">Reading on <abbr>UCD</abbr> for accessibility - Design</a> (Microsoft Word document).
         </li>
-        <li id="ucd4a11y-step-5-07">
+        <li id="ucd4a11y-step-4-07">
           <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4SGVpREZPV1BXVzg">Quiz on Challenges in using <abbr>UCD</abbr> for accessibility</a> (Microsoft Word document).
           <!-- typo in doc title; folde URL: https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4UDg3Qy1tZmFOMGM -->
         </li>
@@ -2035,16 +2032,6 @@
         <li id="accgame-step-5-02">
           <a href="https://vimeo.com/221232193">Development</a>.
         </li>
-        <!--
-        <li id="accgame-step-1-01">
-          <a href=""></a> (Microsoft Word document),
-          <a href=""></a>,
-          <a href=""></a>.
-        </li>
-        <li id="accgame-step-5-03">
-          <a href=""></a>.
-        </li>
-        -->
       </ul>
     </section>
 
