--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -259,6 +259,10 @@
         <a href="https://www.lireo.com/best-practices-for-conducting-an-accessibility-review/">Best Practices for Conducting an Accessibility Review</a>,
         <i class="website">Lireo Designs</i>, 07.08.2017.
       </li>
+      <li>Léonie Watson:
+        <a href="https://tink.uk/playing-with-the-accessibility-object-model-aom/">Playing with the Accessibility Object Model (<abbr>AOM</abbr>)</a>,
+        <i class="blog">Tink</i>, 15.09.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
