--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -276,6 +276,13 @@
         <a href="http://www.nationallawjournal.com/id=1202797283925/Judge-Wants-DOJs-Views-on-Website-Accessibility-for-Blind-Users">Judge Wants <abbr>DOJ</abbr>'s Views on Website Accessibility for Blind Users</a>,
         <i class="journal">The National Law Journal</i>, 05.09.2017.
       </li>
+      <li>European Union:
+        <a href="http://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016L2102">Directive (<abbr>EU</abbr>) 2016/2102 of the European Parliament and of the Council of 26 October 2016 on the accessibility of the websites and mobile applications of public sector bodies</a>.
+      </li>
+      <li lang="nl">Bart Simons:
+        <a href="http://www.anysurfer.be/nl/blog/detail/europese-richtlijn-wie-doet-wat">Europese richtlijn: wie doet wat?</a>,
+        <i class="blog">AnySurfer blog</i>, 31.01.2017.
+      </li>
     </ul>
   </main>
   <!-- Unsorted: 
