--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -263,6 +263,10 @@
         <a href="https://tink.uk/playing-with-the-accessibility-object-model-aom/">Playing with the Accessibility Object Model (<abbr>AOM</abbr>)</a>,
         <i class="blog">Tink</i>, 15.09.2017.
       </li>
+      <li>Manuel Matuzovic:
+        <a href="https://medium.com/@matuzo/writing-css-with-accessibility-in-mind-8514a0007939">Writing <abbr>CSS</abbr> with Accessibility in Mind</a>,
+        <i class="blog">@matuzo</i>, 18.09.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
