--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -266,6 +266,12 @@
       <li>Manuel Matuzovic:
         <a href="https://medium.com/@matuzo/writing-css-with-accessibility-in-mind-8514a0007939">Writing <abbr>CSS</abbr> with Accessibility in Mind</a>,
         <i class="blog">@matuzo</i>, 18.09.2017.
+        <!--@@PDF-->
+      </li>
+      <li>Tess Taylor:
+        <a href="http://www.hrdive.com/news/from-ada-compliance-to-universal-design-creating-accessible-training/505188/">From <abbr>ADA</abbr> compliance to universal design: Creating accessible training</a>,
+        <i class="website"><abbr>HR</abbr> Drive</i>, 19.09.2017.
+        <!--@@PDF-->
       </li>
       <!--
       <li>
