Computing hacks for migraine sufferers.

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -135,6 +135,12 @@
       </li>
     </ul>
 
+    <h2>Other Links</h2>
+    <ul>
+      <li><a href="http://ask.metafilter.com/277495/Computing-hacks-for-migraine-sufferers">Computing hacks for migraine sufferers</a>,
+      <i class="website">AskMetaFilter</i>, 19.03.2015.
+      </li>
+    </ul>
   </main>
 
   <footer>
