MDN: CSS Grid Layout and Accessibility.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -273,6 +273,9 @@
         <i class="website"><abbr>HR</abbr> Drive</i>, 19.09.2017.
         <!--@@PDF-->
       </li>
+      <li><abbr>MDN</abbr> Web Docs:
+        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/CSS_Grid_Layout_and_Accessibility"><abbr>CSS</abbr> Grid Layout and Accessibility</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
