EBU: EU Barrierfreiheitsgesetz erste Lesung.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -300,6 +300,11 @@
         <a href="http://www.anysurfer.be/nl/blog/detail/europese-richtlijn-wie-doet-wat">Europese richtlijn: wie doet wat?</a>,
         <i class="blog">AnySurfer blog</i>, 31.01.2017.
       </li>
+      <li><abbr title="European Blind Union">EBU</abbr>:
+        <a href="http://www.euroblind.org/newsletter/2017/july-september/newsletter/online/de/newsletter/eu-update/nr/3338/">Europäisches Barrierefreiheitsgesetz: Abstimmung im Plenum des <abbr>EU</abbr>-Parlaments in erster Lesung</a>,
+        <i class="magazine"><abbr>EBU</abbr> Newsletter</i>,  July–September 2017.
+        <!--@@PDF-->
+      </li>
     </ul>
   </main>
   <!-- Unsorted: 
