McMeecking: Blink TalkBack a11y.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -213,7 +213,11 @@
         Android Accessibility: I Give Up</a>, 9 January 2014.</li>
       <li><a
         href="https://mcmw.abilitynet.org.uk/android-kitkat-4-4-2-talkback/">Android
-        KitKat 4.4.2 – TalkBack</a>. </li>
+        KitKat 4.4.2 – TalkBack</a>.</li>
+      <li>Chris McMeeking:
+        <a href="https://www.youtube.com/watch?v=2diLo8eSpJo">Blind TalkBack Accessibility IS NOT Inclusive Design</a>
+        (YouTube, 20.09.2017, 8 minutes).
+      </li>
     </ul>
     
     <h3>iOS Accessibility</h3>
