Sethfors: Colorblind accessibility on the Web.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -284,6 +284,10 @@
         <a href="https://libux.co/today-learned-accessibility-tree/">Today, I learned about the Accessibility Tree</a>,
         <i class="website">Lib<abbr>UX</abbr>, 19.02.2017.
       </li>
+      <li>Hampus Sethfors:
+        <a href="https://axesslab.com/colorblind-accessibility-web-fail-success-cases/">Colorblind Accessibility on the Web – Fail and Success Cases</a>,
+        <i class="website">Axess Lab</i>, 06.09.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
